<resources>
    <string name="app_name">Weather-Bak</string>
    <string name="data">Дата</string>
    <string name="temperature">Температура</string>
    <string name="speedWind">Швидкість вітру</string>
    <string name="precipitation">Опади</string>
    <string name="cloudiness">Хмарність</string>
    <string name="future_weather">Погода на наступні 3 дні</string>
    <string name="last_14_days">Погода за останні 2 тижні</string>
    <string name="last_year">Погода за останні 2 тижні  рік тому</string>
    <string name="last_two_years">Погода за останні 2 тижні два роки тому</string>
    <string name="last_three_years">Погода за останні 2 тижні три роки тому</string>

    <string-array name="cities_list">
        <item>Lviv</item>
        <item>Paris</item>
        <item>Kyiv</item>
        <item>Vinnitsa</item>
        <item>Jmerinka</item>
        <item>Odessa</item>
        <item>Berlin</item>
    </string-array>
</resources>
