<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/future_weather" />

    <com.weather_bak.ui.widget.WeatherTable
        android:id="@+id/tl_future_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_14_days" />

    <com.weather_bak.ui.widget.WeatherTable
        android:id="@+id/tl_last_14_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_year" />

    <com.weather_bak.ui.widget.WeatherTable
        android:id="@+id/tl_last_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_two_years" />

    <com.weather_bak.ui.widget.WeatherTable
        android:id="@+id/tl_last_two_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_three_years" />

    <com.weather_bak.ui.widget.WeatherTable
        android:id="@+id/tl_last_three_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>