<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:id="@+id/tr_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_date"
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/data" />

    </TableRow>

    <TableRow
        android:id="@+id/tr_temperature"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_temparature"
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/temperature" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_wind_speed"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_wind_speed"
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/speedWind" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_precipitation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_precipitation"
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/precipitation" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_cloudiness"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_cloudiness"
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/cloudiness" />
    </TableRow>

</TableLayout>
